--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "nth-check": "^2.1.1",
